@@ -24,7 +24,11 @@ Some more features from Perl 5.10 have been added:
   (?(-n) and (?(+n) relative references as conditions.
 
   \K to reset the start of the matched string; for example, (foo)\Kbar
-  matches bar preceded by foo, but only sets bar as the matched string
+  matches bar preceded by foo, but only sets bar as the matched string.
+  
+  (?| introduces a group where the capturing parentheses in each alternative 
+  start from the same number; for example, (?|(abc)|(xyz)) sets capturing 
+  parentheses number 1 in both cases.
 
 
 Release 7.1 24-Apr-07
